// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getRepositoryInfo 1`] = `
{
  "name": "github-url-detection",
  "nameWithOwner": "refined-github/github-url-detection",
  "owner": "refined-github",
  "path": "",
  "pathParts": [],
}
`;

exports[`getRepositoryInfo 2`] = `
{
  "name": "github-url-detection",
  "nameWithOwner": "refined-github/github-url-detection",
  "owner": "refined-github",
  "path": "",
  "pathParts": [],
}
`;

exports[`getRepositoryInfo 3`] = `
{
  "name": "github-url-detection",
  "nameWithOwner": "refined-github/github-url-detection",
  "owner": "refined-github",
  "path": "blame/master/package.json",
  "pathParts": [
    "blame",
    "master",
    "package.json",
  ],
}
`;

exports[`getRepositoryInfo 4`] = `
{
  "name": "github-url-detection",
  "nameWithOwner": "refined-github/github-url-detection",
  "owner": "refined-github",
  "path": "commit/57bf4",
  "pathParts": [
    "commit",
    "57bf4",
  ],
}
`;

exports[`getRepositoryInfo 5`] = `
{
  "name": "github-url-detection",
  "nameWithOwner": "refined-github/github-url-detection",
  "owner": "refined-github",
  "path": "compare/test-branch",
  "pathParts": [
    "compare",
    "test-branch",
  ],
}
`;

exports[`getRepositoryInfo 6`] = `
{
  "name": "github-url-detection",
  "nameWithOwner": "refined-github/github-url-detection",
  "owner": "refined-github",
  "path": "tree/master/distribution",
  "pathParts": [
    "tree",
    "master",
    "distribution",
  ],
}
`;

exports[`getRepositoryInfo 7`] = `
{
  "name": "github-url-detection",
  "nameWithOwner": "refined-github/github-url-detection",
  "owner": "refined-github",
  "path": "tree/master/distribution",
  "pathParts": [
    "tree",
    "master",
    "distribution",
  ],
}
`;

exports[`getRepositoryInfo 8`] = `
{
  "name": "github-url-detection",
  "nameWithOwner": "refined-github/github-url-detection",
  "owner": "refined-github",
  "path": "",
  "pathParts": [],
}
`;

exports[`getRepositoryInfo 9`] = `
{
  "name": "github-url-detection",
  "nameWithOwner": "refined-github/github-url-detection",
  "owner": "refined-github",
  "path": "",
  "pathParts": [],
}
`;

exports[`getRepositoryInfo 10`] = `
{
  "name": "github-url-detection",
  "nameWithOwner": "refined-github/github-url-detection",
  "owner": "refined-github",
  "path": "blame/master/package.json",
  "pathParts": [
    "blame",
    "master",
    "package.json",
  ],
}
`;

exports[`getRepositoryInfo 11`] = `
{
  "name": "github-url-detection",
  "nameWithOwner": "refined-github/github-url-detection",
  "owner": "refined-github",
  "path": "commit/57bf4",
  "pathParts": [
    "commit",
    "57bf4",
  ],
}
`;

exports[`getRepositoryInfo 12`] = `
{
  "name": "github-url-detection",
  "nameWithOwner": "refined-github/github-url-detection",
  "owner": "refined-github",
  "path": "compare/test-branch",
  "pathParts": [
    "compare",
    "test-branch",
  ],
}
`;

exports[`getRepositoryInfo 13`] = `
{
  "name": "github-url-detection",
  "nameWithOwner": "refined-github/github-url-detection",
  "owner": "refined-github",
  "path": "tree/master/distribution",
  "pathParts": [
    "tree",
    "master",
    "distribution",
  ],
}
`;

exports[`getRepositoryInfo 14`] = `
{
  "name": "github-url-detection",
  "nameWithOwner": "refined-github/github-url-detection",
  "owner": "refined-github",
  "path": "tree/master/distribution",
  "pathParts": [
    "tree",
    "master",
    "distribution",
  ],
}
`;

exports[`getRepositoryInfo 15`] = `
{
  "name": "github-url-detection",
  "nameWithOwner": "refined-github/github-url-detection",
  "owner": "refined-github",
  "path": "",
  "pathParts": [],
}
`;

exports[`getRepositoryInfo 16`] = `
{
  "name": "github-url-detection",
  "nameWithOwner": "refined-github/github-url-detection",
  "owner": "refined-github",
  "path": "",
  "pathParts": [],
}
`;

exports[`getRepositoryInfo 17`] = `
{
  "name": "github-url-detection",
  "nameWithOwner": "refined-github/github-url-detection",
  "owner": "refined-github",
  "path": "blame/master/package.json",
  "pathParts": [
    "blame",
    "master",
    "package.json",
  ],
}
`;

exports[`getRepositoryInfo 18`] = `
{
  "name": "github-url-detection",
  "nameWithOwner": "refined-github/github-url-detection",
  "owner": "refined-github",
  "path": "commit/57bf4",
  "pathParts": [
    "commit",
    "57bf4",
  ],
}
`;

exports[`getRepositoryInfo 19`] = `
{
  "name": "github-url-detection",
  "nameWithOwner": "refined-github/github-url-detection",
  "owner": "refined-github",
  "path": "compare/test-branch",
  "pathParts": [
    "compare",
    "test-branch",
  ],
}
`;

exports[`getRepositoryInfo 20`] = `
{
  "name": "github-url-detection",
  "nameWithOwner": "refined-github/github-url-detection",
  "owner": "refined-github",
  "path": "tree/master/distribution",
  "pathParts": [
    "tree",
    "master",
    "distribution",
  ],
}
`;

exports[`getRepositoryInfo 21`] = `
{
  "name": "github-url-detection",
  "nameWithOwner": "refined-github/github-url-detection",
  "owner": "refined-github",
  "path": "tree/master/distribution",
  "pathParts": [
    "tree",
    "master",
    "distribution",
  ],
}
`;
